--- a/files/Theme/Theme-Mazette-Dark-V1/const.less
+++ b/files/Theme/Theme-Mazette-Dark-V1/const.less
@@ -41,15 +41,15 @@
 @panel-footer-border-top-color: #5C5C5C;
 
 /* Sub-panel */
-@subpanel-background-color: #171717;
+@subpanel-background-color: #232323;
 @subpanel-color: #F1F1F1;
 @subpanel-border-color: #5C5C5C;
 @subpanel-border-radius: 0rem;
 @subpanel-box-shadow: none;
-@subpanel-header-background-color: #171717;
+@subpanel-header-background-color: #232323;
 @subpanel-header-color: #8B8B8B;
 @subpanel-header-border-bottom-color: #5C5C5C;
-@subpanel-footer-background-color: #171717;
+@subpanel-footer-background-color: #232323;
 @subpanel-footer-color: #8B8B8B;
 @subpanel-footer-border-top-color: #5C5C5C;
 
@@ -60,10 +60,9 @@
 @tab-border-color: #5C5C5C;
 @tab-border-bottom-color: #5C5C5C;
 @tab-border-radius: 0rem;
-@tab-active-background-color: #171717;
+@tab-active-background-color: #232323;
 @tab-active-color: #F1F1F1;
-@tab-active-border-color: #ECECEC;
-@tab-content-background-color: #171717;
+@tab-content-background-color: #232323;
 @tab-content-color: #F1F1F1;
 @tab-content-border-color: #5C5C5C;
 @tab-content-box-shadow: none;
@@ -72,8 +71,8 @@
 @field-label-color: #8B8B8B;
 @field-label-font-weight: 500;
 @field-input-background: #171717;
-@field-input-readonly-background: #8B8B8B;
-@field-input-reference-background: #8B8B8B;
+@field-input-readonly-background: rgba(255, 237, 194, 0.25);
+@field-input-reference-background: rgba(247, 216, 248, 0.25);
 @field-input-border-bottom-color: #5C5C5C;
 @field-input-border-radius: 0rem;
 @field-addon-background: #2E2E2E;
