--- a/files/Theme/Theme-Mazette-Light-V1/addon.less
+++ b/files/Theme/Theme-Mazette-Light-V1/addon.less
@@ -71,6 +71,7 @@
 @background-fade-color:     fade(@mazette-black-01, 25%);
 @background-dropdown-color: @mazette-black-01;
 @text-main-color:           @mazette-black-08;
+@text-color:           @mazette-black-08;
 @text-light-color:          @mazette-black-10;
 @text-dark-color:           @mazette-black-03;
 @layer1-color:              @mazette-black-02;
