ace tooltip for LSP

--- a/files/Theme/Theme-Mazette-Dark-V1/addon.less
+++ b/files/Theme/Theme-Mazette-Dark-V1/addon.less
@@ -1329,3 +1329,11 @@ ul.root-ul {
 		border-radius: 0 !important;
 	}
 }
+
+.ace_tooltip {
+	background: @layer1-color !important;
+	
+	* {
+		color: @text-color !important;
+	}
+}
