--- a/files/Theme/Theme-Mazette-Light-V1/addon.less
+++ b/files/Theme/Theme-Mazette-Light-V1/addon.less
@@ -1293,3 +1293,11 @@ ul.root-ul {
 		}
 	}
 }
+
+.ace_tooltip {
+	background: @layer1-color !important;
+	
+	* {
+		color: @text-color !important;
+	}
+}
