user dashboard card issue

--- a/files/Theme/ThemeMondrian-Light/addon.less
+++ b/files/Theme/ThemeMondrian-Light/addon.less
@@ -1301,3 +1301,7 @@ ul.root-ul {
 		color: @text-color !important;
 	}
 }
+
+.user-dashboard > .tabs-top > .tab-content > .panel-card > .card {
+	background: #f9f8f7 !important;
+}
