user dashboard fix (light)

--- a/files/Theme/ThemeMondrian-Light/addon.less
+++ b/files/Theme/ThemeMondrian-Light/addon.less
@@ -1302,6 +1302,13 @@ ul.root-ul {
 	}
 }
 
-.user-dashboard > .tabs-top > .tab-content > .panel-card > .card {
-	background: #f9f8f7 !important;
+// .user-dashboard > .tabs > .tab-content > .tab-pane.active {
+// 	background: @bg-website-color !important;
+// }
+
+.user-dashboard > .tabs > .tab-content > .tab-pane.active > .panel-card > .card {
+	background: #F8F7F6 !important;
+	& > .card-footer {
+		background: #F8F7F6 !important;
+	}
 }
