user dashboard fix (dark)

--- a/files/Theme/ThemeMondrian-Dark/addon.less
+++ b/files/Theme/ThemeMondrian-Dark/addon.less
@@ -1337,3 +1337,11 @@ ul.root-ul {
 		color: @text-color !important;
 	}
 }
+
+// Dashboard fixes
+.user-dashboard > .tabs > .tab-content > .tab-pane.active > .panel-card > .card {
+	background: #232323 !important;
+	& > .card-footer {
+		background: #232323 !important;
+	}
+}
