--- a/files/Theme/ThemeMondrian-Dark/addon.less
+++ b/files/Theme/ThemeMondrian-Dark/addon.less
@@ -1331,8 +1331,8 @@ ul.root-ul {
 }
 
 .ace_tooltip {
-	background: @layer1-color !important;
-	max-height: 450px !important;
+	background: @background-color !important;
+	max-height: 425px !important;
 	
 	* {
 		color: @text-color !important;
