--- a/files/Theme/ThemeMondrian-Light/addon.less
+++ b/files/Theme/ThemeMondrian-Light/addon.less
@@ -1307,8 +1307,8 @@ ul.root-ul {
 }
 
 .ace_tooltip {
-	background: @layer1-color !important;
-	max-height: 450px !important;
+	background: @bg-website-color !important;
+	max-height: 425px !important;
 	
 	* {
 		color: @text-color !important;
